Correction du bug d'affichage des boutons tags de la galerie et de la navigation de la lightbox

--- a/assets/style.css
+++ b/assets/style.css
@@ -93,6 +93,7 @@ body {
 #gallery {
 	/*	min-height: 100vh; */
 }
+
 .title{
 	text-align: center;
 	padding-block: 2em;
@@ -108,6 +109,11 @@ body {
 .nav-pills .nav-link {
 	color: #000
 }
+
+.gallery .nav-link:hover, .gallery-item:hover {
+	cursor: pointer;
+}
+
 .item-column {
 	position: relative;
 	margin-bottom: 0 !important;
