--- a/css/style.css
+++ b/css/style.css
@@ -102,8 +102,8 @@ body {
 }
 
 .gallery-item {
-	width: 440;
-	height: 440;
+	width: 440px;
+	height: 440px;
 }
 
 .title{
@@ -244,7 +244,7 @@ form {
 form input {
 	width: 100%;
 	color: #FFF;
-	background-color: transparent;
+	background-color: #FFF;
 	border: solid 1px #000;
 	height: 2.5em;
 	margin-bottom: 20px;
@@ -252,7 +252,7 @@ form input {
 
 form textarea {
 	width: 100%;
-	background-color: transparent;
+	background-color: #FFF;
 	border: solid 1px;
 	height: 5em;
 	line-height: 2.5em;
@@ -268,6 +268,12 @@ input[type="submit"] {
 	font-size: 1rem;
 }
 
+footer {
+	background: #000;
+	color: #FFF;
+	height: 50px;
+	padding: 10px;
+}
 @media all and (max-width: 1180px) {
 	.picture {
 		flex : 2;
